docs: update readme